[package]
name = "yapt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
image = "0.24.7"
minifb = "0.25.0"
derive-new = "0.5.9"
bvh = { path = "crates/bvh" }
utility = { path = "crates/utility" }
rand = "0.8.5"
log = { version = "0.4.19", features = ["std"] }
indicatif = "0.17.3"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.31"
tobj = "4.0.0"
once_cell = "1.18.0"
clap = { version = "4.4.12", features = ["derive"] }
rand_pcg = "0.3.1"
exr = "1.71.0"
