[package]
name = "yapt"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.test]
opt-level = 2

[dependencies]
rayon = "1.8.0"
image = "0.25.1"
minifb = "0.27.0"
derive-new = "0.6.0"
bvh = { path = "crates/bvh" }
utility = { path = "crates/utility" }
rand = "0.8.5"
log = { version = "0.4.19", features = ["std"] }
indicatif = "0.17.3"
env_logger = "0.11.3"
tobj = "4.0.0"
once_cell = "1.18.0"
clap = { version = "4.4.12", features = ["derive"] }
rand_pcg = "0.3.1"
exr = "1.71.0"
rand_distr = "0.4.3"
