[package]
name = "yapt"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.test]
opt-level = 2

[dependencies]
rayon = "1.8.0"
image = "0.25.1"
derive-new = "0.6.0"
bvh = { path = "crates/bvh" }
utility = { path = "crates/utility" }
rand = "0.8.5"
log = { version = "0.4.19", features = ["std"] }
env_logger = "0.11.3"
tobj = "4.0.0"
clap = { version = "4.4.12", features = ["derive"] }
rand_pcg = "0.3.1"
exr = "1.71.0"
rand_distr = "0.4.3"
eframe = { version = "0.29.1", optional = true }
egui = { version = "0.29.1", optional = true }
num_cpus = "1.16.0"

[dev-dependencies]
GSL = "7.0"

[features]
default = ["gui"]
gui = ["dep:egui", "dep:eframe"]
