[package]
name = "bvh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yapt_core = { path = "../yapt_core"}

[dev-dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_core = "0.6.4"
rand_seeder = "0.2.3"
divan = "0.1.15"


[[bench]]
name = "bvh"
harness = false
